Separate concerns add to do list items

--- a/ToDoApp/ToDoApp/General/Strings/en.lproj/Localizable.strings
+++ b/ToDoApp/ToDoApp/General/Strings/en.lproj/Localizable.strings
@@ -20,3 +20,7 @@
 "weatherView.title" = "ToDo App List";
 
 "homeView.listbutton.title" = "Create new task";
+
+"listView.toDoHeading" = "To do";
+
+"listView.completedHeading" = "Completed";
